test_suite5/ALAN/test_suite/alan-2022-examples/failing/006130_mutation.alan
source Pzk begin leave 5 > = 64 end
